[refs #56] Fix issue with NHS logo alignment
The NHS logo was not aligning properly with the footer links.
This needs refactoring into the footer component, for the time being
it is in shame.scss

--- a/packages/core/_shame.scss
+++ b/packages/core/_shame.scss
@@ -39,3 +39,36 @@
     }
   }
 }
+
+/**
+ * Fixes an issue with the footer logo sizing and alignment,
+ * needs refactoring into the footer component.
+ *
+**/
+
+.nhsuk-logo {
+  border: 0;
+  height: 40px;
+  max-width: 100%;
+  vertical-align: middle;
+  width: 99px;
+}
+
+.nhsuk-footer__logo {
+
+  a {
+    display: block;
+    height: 40px;
+    width: 99px;
+
+    .visually-hidden {
+      top: -9999px; // Moves outline on iOS off screen
+    }
+
+    &:hover {
+      box-shadow: 0 0 0 4px $colour_shade_nhsuk-blue-35;
+    }
+
+  }
+
+}
